--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -129,6 +129,6 @@ h1{
 	height:15%;
 	margin-right:8%;
 	margin-top:14%;
-	background:url(../res/technologies_wall.png);
-	background-size:100% 100%;
+/*	background:url(../res/technologies_wall.png);
+	background-size:100% 100%;*/
 }
